--- a/Host.3
+++ b/Host.3
@@ -31,7 +31,7 @@ namespace Core::Network
         *addrinfo results
 
         if getaddrinfo(name, protocol, hints, &results) != 0
-            printf("Unable to get host info\n")
+            printf("[Network::Host] Unable to get host info\n")
             return false
         end
 
@@ -50,8 +50,8 @@ namespace Core::Network
 
         memset(&hints, 0, sizeof(addrinfo))
 
-        hints.ai_family = 0 # AF_UNSPEC (darwin and linux)
-        hints.ai_socktype = 1 # SOCK_STREAM (darwin and linux)
+        hints.ai_family = AF_UNSPEC
+        hints.ai_socktype = SOCK_STREAM
         hints.ai_flags = 0
         hints.ai_protocol = 0
 
@@ -65,7 +65,7 @@ namespace Core::Network
             *addrinfo results
 
             if getaddrinfo(name, protocol, &hints, &results) != 0
-                printf("Unable to get host info\n")
+                printf("[Network::Host] Unable to get host info\n")
                 return
             end
 
@@ -87,14 +87,14 @@ namespace Core::Network
 
         Int fd = socket(ai->ai_family, ai->ai_socktype, ai->ai_protocol)
         if fd < 0
-            printf("socket call failed\n")
+            printf("[Network::Host] socket call failed\n")
             closure(-1)
             return
         end
 
         if connect(fd, ai->ai_addr, ai->ai_addrlen) < 0
             close(fd)
-            printf("connect to socket %d failed\n", fd)
+            printf("[Network::Host] connect to socket %d failed\n", fd)
             closure(-1)
             return
         end
